@@ -1,3 +1,8 @@
+2006-12-18  Tomas Mraz  <t8m@centrum.cz>
+
+	* modules/pam_unix/pam_unix_passwd.c (pam_sm_chauthtok): Localize
+	message printed to user.
+
 2006-12-13  Thorsten Kukuk  <kukuk@suse.de>
 
 	* modules/pam_localuser/pam_localuser.c: Add support for session
